fix! : Form align center in mobile device view

--- a/style.css
+++ b/style.css
@@ -1484,7 +1484,7 @@ nav {
 
   .contact-section {
     margin: 5px 0px;
-    padding: 80px 50px;
+    padding: 80px 0px;
     color: white;
     text-align: center;
   }
